--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ TODO
 * Delete unnecessary variables
 * Replace test for equal charcode by test for equal charcode AND equal meaning
 * For token list conditionals, check for length equal to 1 and do not pass tail, if true. Makes ..._or_empty functions obsolete.
+* Maybe replace \use:c by \cs_if_exist_use:cF and throw an error message in false part
 
 
 
