--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -900,74 +900,43 @@
 
 
 % Test whether token list is a float or empty
-\prg_new_conditional:Npnn \subfiglist_is_float_or_empty:n #1 { p, T, F, TF }
+\prg_new_conditional:Npnn \subfiglist_is_float:n #1 { p, T, F, TF }
 %
 % #1: Token list
 %
 {
-  \tl_if_empty:nTF { #1 }
+  % Check whether first token is digit
+  \subfiglist_is_digit:tTF { \tl_head:n { #1 } }
   {
-    % We are done if the token list is empty
-    \prg_return_true:
-  }{
-    % Check whether first token is digit
-    \subfiglist_is_digit:tTF { \tl_head:n { #1 } }
+    % Is this the last token, or ar there remaining tokens?
+    \int_compare:nTF { \tl_count:n { #1 } = 1 }
     {
-      % Check remaining tokens, if true
-      \subfiglist_is_float_or_empty:tTF { \tl_tail:n { #1 } }
+      % This is the last token. Return true.
+      \prg_return_true:
+    }{
+      % Check remaining tokens
+      \subfiglist_is_float:tTF { \tl_tail:n { #1 } }
+      {
+        \prg_return_true:
+      }{
+        \prg_return_false:
+      }
+    }
+  }{
+    % Check for decimal separator
+    \subfiglist_token_if_eq:NtTF . { \tl_head:n { #1 } }
+    {
+      % Check if trailing end is an integer, if true
+      \subfiglist_is_integer:tTF { \tl_tail:n { #1 } }
       {
         \prg_return_true:
       }{
         \prg_return_false:
       }
     }{
-      % Check for decimal separator otherwise
-      \subfiglist_token_if_eq:NtTF . { \tl_head:n { #1 } }
-      {
-        % Check if trailing end is an integer, if true
-        \subfiglist_is_integer:tTF { \tl_tail:n { #1 } }
-        {
-          \prg_return_true:
-        }{
-          \prg_return_false:
-        }
-      }{
-        % Return false otherwise
-        \prg_return_false:
-      }
+      % Return false otherwise
+      \prg_return_false:
     }
-  }
-}
-
-% Define variants of \subfiglist_is_float_or_empty expanding its argument twice
-\cs_new:Npn \subfiglist_is_float_or_empty_p:t #1
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_float_or_empty_p:n { #1 }
-}
-\cs_new:Npn \subfiglist_is_float_or_empty:tT #1 #2
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_float_or_empty:nT { #1 } { #2 }
-}
-\cs_new:Npn \subfiglist_is_float_or_empty:tF #1 #2
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_float_or_empty:nF { #1 } { #2 }
-}
-\cs_new:Npn \subfiglist_is_float_or_empty:tTF #1 #2 #3
-{
-  \subfiglist_exp_args:Nt \subfiglist_is_float_or_empty:nTF { #1 } { #2 } { #3 }
-}
-
-% Test whether token list is a float
-\prg_new_conditional:Npnn \subfiglist_is_float:n #1 { p, T, F, TF }
-%
-% #1: Token list
-%
-{
-  \bool_if:nTF { !\tl_if_empty_p:n { #1 } && \subfiglist_is_float_or_empty_p:n { #1 } }
-  {
-    \prg_return_true:
-  }{
-    \prg_return_false:
   }
 }
 
